RESOLVED FIXED74259
Crash when trying to garbage collect JavaScript objects
https://bugs.webkit.org/show_bug.cgi?id=74259
Summary Crash when trying to garbage collect JavaScript objects
Anders Carlsson
Reported 2011-12-11 17:16:54 PST
Crash when trying to garbage collect JavaScript objects
Attachments
Patch (1.48 KB, patch)
2011-12-11 17:19 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-12-11 17:19:05 PST
Anders Carlsson
Comment 2 2011-12-11 17:23:00 PST
Note You need to log in before you can comment on or make changes to this bug.