Crash when trying to garbage collect JavaScript objects https://bugs.webkit.org/show_bug.cgi?id=74259 <rdar://problem/10556188>

Reviewed by Sam Weinig.

* UIProcess/WebContext.cpp:
(WebKit::WebContext::garbageCollectJavaScriptObjects):
Use sendToAllProcesses which is more correct and also handles m_process being null.

Canonical link: https://commits.webkit.org/90949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102551 268f45cc-cd09-0410-ab3c-d52691b4dbfc